--- a/main.ipynb
+++ b/main.ipynb
@@ -26,10 +26,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "cpu = torch.device(\"cpu\")\n",
     "device = torch.device(\"mps\" if torch.backends.mps.is_available() else \"cpu\")\n",
-    "device\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
-    "cpu = torch.device(\"cpu\")"
+    "device"
    ]
   },
   {
@@ -38,11 +39,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# images = \"./data/train/kidney_1_dense/images\"\n",
-    "# labels = \"./data/train/kidney_1_dense/labels\"\n",
+    "images = \"./data/train/kidney_1_dense/images\"\n",
+    "labels = \"./data/train/kidney_1_dense/labels\"\n",
     "\n",
-    "images = \"./data/train/kidney_1_voi/images\"\n",
-    "labels = \"./data/train/kidney_1_voi/labels\"\n",
+    "# images = \"./data/train/kidney_1_voi/images\"\n",
+    "# labels = \"./data/train/kidney_1_voi/labels\"\n",
     "\n",
     "# get each file in the folder\n",
     "image_set = os.listdir(images)\n",
@@ -53,50 +54,50 @@
     "image_set.sort()\n",
     "label_set.sort()\n",
     "\n",
-    "index = random.randint(0, set_length)\n",
+    "# index = random.randint(0, set_length)\n",
     "\n",
-    "image = image_set[index]\n",
-    "image_name = os.path.join(images, image)\n",
+    "# image = image_set[index]\n",
+    "# image_name = os.path.join(images, image)\n",
     "\n",
-    "label = label_set[index]\n",
-    "label_name = os.path.join(labels, label)\n",
+    "# label = label_set[index]\n",
+    "# label_name = os.path.join(labels, label)\n",
     "\n",
-    "print (index)\n",
-    "print (image_name)\n",
+    "# print (index)\n",
+    "# print (image_name)\n",
     "\n",
-    "image_pil = Image.open(image_name)\n",
-    "label_pil = Image.open(label_name)\n",
+    "# image_pil = Image.open(image_name)\n",
+    "# label_pil = Image.open(label_name)\n",
     "\n",
-    "image_tensor = transforms.ToTensor()(image_pil).float()\n",
-    "label_tensor = transforms.ToTensor()(label_pil)\n",
+    "# image_tensor = transforms.ToTensor()(image_pil).float()\n",
+    "# label_tensor = transforms.ToTensor()(label_pil)\n",
     "\n",
-    "image_shape = image_tensor.shape\n",
-    "print (image_shape)\n",
+    "# image_shape = image_tensor.shape\n",
+    "# print (image_shape)\n",
     "\n",
-    "# Find the maximum value in the tensor\n",
-    "max_value = torch.max(image_tensor)\n",
-    "min_value = torch.min(image_tensor)\n",
+    "# # Find the maximum value in the tensor\n",
+    "# max_value = torch.max(image_tensor)\n",
+    "# min_value = torch.min(image_tensor)\n",
     "\n",
-    "# # Normalize the tensor by dividing by the maximum value\n",
-    "# image_tensor = (image_tensor - min_value) / (max_value - min_value)\n",
+    "# # # Normalize the tensor by dividing by the maximum value\n",
+    "# # image_tensor = (image_tensor - min_value) / (max_value - min_value)\n",
     "\n",
-    "print (torch.max(image_tensor))\n",
-    "print (torch.min(image_tensor))\n",
+    "# print (torch.max(image_tensor))\n",
+    "# print (torch.min(image_tensor))\n",
     "\n",
-    "print (image_tensor)\n",
+    "# print (image_tensor)\n",
     "\n",
-    "# plot the image and label side by side\n",
-    "fig, axes = plt.subplots(nrows=1, ncols=2)\n",
-    "ax = axes.ravel()\n",
+    "# # plot the image and label side by side\n",
+    "# fig, axes = plt.subplots(nrows=1, ncols=2)\n",
+    "# ax = axes.ravel()\n",
     "\n",
-    "ax[0].imshow(image_tensor.permute(1, 2, 0))\n",
-    "ax[0].set_title(\"Image\")\n",
+    "# ax[0].imshow(image_tensor.permute(1, 2, 0))\n",
+    "# ax[0].set_title(\"Image\")\n",
     "\n",
-    "ax[1].imshow(label_tensor.permute(1, 2, 0))\n",
-    "ax[1].set_title(\"Label\")\n",
+    "# ax[1].imshow(label_tensor.permute(1, 2, 0))\n",
+    "# ax[1].set_title(\"Label\")\n",
     "\n",
-    "plt.tight_layout()\n",
-    "plt.show()\n",
+    "# plt.tight_layout()\n",
+    "# plt.show()\n",
     "\n"
    ]
   },
@@ -236,14 +237,14 @@
     "\n",
     "        return x\n",
     "    \n",
-    "sample = image_tensor.unsqueeze(0).to(device)\n",
-    "print (sample.shape)\n",
+    "# sample = image_tensor.unsqueeze(0).to(device)\n",
+    "# print (sample.shape)\n",
     "\n",
-    "unet = UNet(in_channels=1, out_channels=1).to(device)\n",
-    "output = unet(sample)\n",
+    "# unet = UNet(in_channels=1, out_channels=1).to(device)\n",
+    "# output = unet(sample)\n",
     "\n",
-    "output = output.squeeze(0)\n",
-    "plt.imshow(output.permute(1, 2, 0).detach().to(cpu).numpy())"
+    "# output = output.squeeze(0)\n",
+    "# plt.imshow(output.permute(1, 2, 0).detach().to(cpu).numpy())"
    ]
   },
   {
@@ -252,7 +253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tensor_label_set = []\n",
+    "image_label_set = []\n",
     "\n",
     "for i in range(set_length):\n",
     "    image = image_set[i]\n",
@@ -261,22 +262,10 @@
     "    label = label_set[i]\n",
     "    label_name = os.path.join(labels, label)\n",
     "\n",
-    "    image_pil = Image.open(image_name)\n",
-    "    label_pil = Image.open(label_name)\n",
+    "    image_label_set.append((image_name, label_name))\n",
     "\n",
-    "    image_tensor = transforms.ToTensor()(image_pil).float()\n",
-    "    label_tensor = transforms.ToTensor()(label_pil)\n",
-    "\n",
-    "    # max_value = torch.max(image_tensor)\n",
-    "    # min_value = torch.min(image_tensor)\n",
-    "\n",
-    "    # # Normalize the tensor by dividing by the maximum value\n",
-    "    # image_tensor = (image_tensor - min_value) / (max_value - min_value)\n",
-    "\n",
-    "    tensor_label_set.append((image_tensor, label_tensor))\n",
-    "\n",
-    "random.shuffle(tensor_label_set)\n",
-    "print (len(tensor_label_set))"
+    "random.shuffle(image_label_set)\n",
+    "print (len(image_label_set))"
    ]
   },
   {
@@ -290,15 +279,23 @@
     "\n",
     "#Adjust this to take a dir name instead [VK]\n",
     "class KidneyDataset(Dataset):\n",
-    "    def __init__(self, tensor_label_set):\n",
-    "        self.tensor_label_set = tensor_label_set\n",
+    "    def __init__(self, image_label_set, device):\n",
+    "        self.image_label_set = image_label_set\n",
+    "        self.device = device\n",
     "\n",
     "    def __len__(self):\n",
-    "        return len(self.tensor_label_set)\n",
+    "        return len(self.image_label_set)\n",
     "\n",
     "    def __getitem__(self, index):\n",
-    "        image, label = self.tensor_label_set[index]\n",
-    "        return image, label"
+    "        image_name, label_name = self.image_label_set[index]\n",
+    "\n",
+    "        image_pil = Image.open(image_name)\n",
+    "        label_pil = Image.open(label_name)\n",
+    "\n",
+    "        image_tensor = transforms.ToTensor()(image_pil).float().to(self.device)\n",
+    "        label_tensor = transforms.ToTensor()(label_pil).to(self.device)\n",
+    "\n",
+    "        return image_tensor, label_tensor"
    ]
   },
   {
@@ -307,7 +304,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = KidneyDataset(tensor_label_set)\n",
+    "dataset = KidneyDataset(image_label_set, device=device)\n",
     "\n",
     "# create a dataloader\n",
     "dataloader = DataLoader(dataset, batch_size=1, shuffle=True)\n",
@@ -335,8 +332,8 @@
     "    loop = tqdm(dataloader)\n",
     "    for i, (images_tensors, labels) in enumerate(loop):\n",
     "        # forward pass\n",
-    "        outputs = model(images_tensors.to(device))\n",
-    "        loss = criterion(outputs, labels.to(device))\n",
+    "        outputs = model(images_tensors)\n",
+    "        loss = criterion(outputs, labels)\n",
     "\n",
     "        # backward pass\n",
     "        optimizer.zero_grad()\n",
@@ -433,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
